<resources>
    <string name="app_name">Premier League App</string>

    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_favorite">Favorite</string>

    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="title_favorite">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Description</string>
    <string name="tab_text_2">About Club</string>
    <string name="leagues">Liga</string>
    <string name="established">Tahun Berdiri</string>
    <string name="stadium">Nama Stadium</string>
    <string name="tv_stadium_capacity_label">Kapasitas Stadium</string>
    <string name="tv_stadium_location">Lokasi Stadium</string>
    <string name="tv_stadium_desc_label">Deskripsi Stadium</string>
    <string name="example_desc_stadium">Old Trafford is a football stadium in Old Trafford, Greater Manchester, England, and the home of Manchester United. With a capacity of 74,140 seats, it is the largest club football stadium in the United Kingdom.</string>
    <string name="tv_stadium_image_label">Gambar terkait</string>
</resources>